introducción a la sección de regresión

--- a/memoria_trabajo/src/regresion.tex
+++ b/memoria_trabajo/src/regresion.tex
@@ -1,5 +1,13 @@
 \section{Regresión}
 
+En esta sección aplicaremos dos métodos de regresión al conjunto de datos baseball. Los métodos que aplicaremos serán:
+
+\begin{itemize}
+	\item Regresión lineal, tanto simple como múltiple.
+	\item K-NN.
+\end{itemize}
+
+Tras aplicar estos métodos realizaremos una comparación estadistica entre ellos y con un tercer método, el método de regresión M5'.
 
 \subsection{Regresión lineal simple}
 
